--- a/client/index.html
+++ b/client/index.html
@@ -2,9 +2,13 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/moneymap-favicon.svg" />
+    <link rel="alternate icon" href="/moneymap-favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + TS</title>
+    <meta name="description" content="MoneyMap - Your personal financial planning journey. Track expenses, plan investments, and achieve your financial goals with our comprehensive financial planning tool." />
+    <meta name="keywords" content="financial planning, money management, investment planning, budgeting, personal finance" />
+    <meta name="author" content="MoneyMap" />
+    <title>MoneyMap - Your Personal Financial Planning Journey</title>
   </head>
   <body>
     <div id="root"></div>
