Add Google OAuth authentication to signup and login
- Implemented Google Sign-In for both login and signup pages
- Added OAuth backend endpoint to verify Google tokens
- Created loginWithGoogle method in AuthContext
- Added Google Sign-In button with Google Identity Services
- Included comprehensive setup documentation (GOOGLE_AUTH_SETUP.md)
- Updated .gitignore to exclude Python cache files
- All credentials remain secure using environment variables

--- a/client/index.html
+++ b/client/index.html
@@ -9,6 +9,7 @@
     <meta name="keywords" content="financial planning, money management, investment planning, budgeting, personal finance" />
     <meta name="author" content="MoneyMap" />
     <title>MoneyMap - Your Personal Financial Planning Journey</title>
+    <script src="https://accounts.google.com/gsi/client" async defer></script>
   </head>
   <body>
     <div id="root"></div>
