Add file header comments with author attribution
- Add headers to all project files with author names (Kamal Sherawat, JJ Feeney III, Jason Albanus)
- Include file descriptions and date (Virginia Tech August 22, 2025)
- Backend files credited to Jason Albanus
- Database and visualization files credited to JJ Feeney III
- Frontend files credited to Kamal Sherawat with co-authorship for chart components

--- a/client/index.html
+++ b/client/index.html
@@ -1,3 +1,11 @@
+<!-- index.html
+
+Kamal Sherawat Virginia Tech August 22, 2025
+
+Main HTML entry point for the MoneyMap React application with meta tags,
+Google OAuth script, and root element for React rendering.
+
+-->
 <!doctype html>
 <html lang="en">
   <head>
